# moss-soundeffect-mlx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: dit-checkpoint-keys.json  handoff.md  upstream-findings.md
moss_sfx_mlx/: __init__.py  config.py  pipeline_mlx.py  prompter.py  scheduler.py
moss_sfx_mlx/model/: dac_vae.py  qwen3_text_encoder.py  wan_audio_dit.py  wan_video_dit.py
moss_sfx_mlx/utils/: convert.py  weights.py
scripts/: capture_goldens.py  convert_weights.py  export_swift_fixtures.py  generate.py  publish_prep.py  quantize.py
swift/: Package.resolved  Package.swift
swift/Sources/MossSoundEffectMLX/: Attention.swift  DACVAEDecoder.swift  FlowMatchScheduler.swift  Pipeline.swift  Qwen3TextEncoder.swift  WanAudioModel.swift  WanPrompter.swift
swift/Tests/MossSoundEffectMLXTests/: ParityTests.swift  TokenizerTests.swift  VAEDebugTests.swift
tests/fixtures/: golden_final_latent.npy  golden_meta.json  golden_noise.npy  golden_velocity_t1000.npy  golden_velocity_t500.npy
tests/parity/: test_dit_block_parity.py  test_dit_full_parity.py  test_pipeline_parity.py  test_scheduler_parity.py  test_text_encoder_parity.py  test_vae_decode_parity.py
